--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CSS Envelope + Letter (Open/Close on Click)</title>
+    <title>Envelope + Letter</title>
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
@@ -13,11 +13,11 @@
             <div class="envelope">
                 <div class="letter">
                     <div class="text">
-                        <strong>Dear Person.</strong>
+                        <strong>Dear : Nabila Tri Lintang💕</strong>
                         <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                            Numquam labore omnis minus maiores laboriosam, facere in beatae esse. 
+                            No one has the ability to do something perfect. But each person is given a lot of opportunity to do something right.
                         </p>
+                        <p>Remember! Strong hope can make your dreams come true.</p>
                     </div>
                 </div>
             </div>
